src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>rC_Connect__Charge_Attempts__c</fullName>
        <description>Number of times this Contract has been submitted to a Payment Processor.</description>
        <inlineHelpText>Number of times this Contract has been submitted to a Payment Processor.</inlineHelpText>
        <label>Charge Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Comments__c</fullName>
        <description>Holds Comments related to payment processing information.</description>
        <inlineHelpText>Holds Comments related to payment processing information.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Payment_Transaction_ID__c</fullName>
        <description>It stores the Transaction Id returns from the Payment Gateway when this contarct is charging any payment method.</description>
        <inlineHelpText>It stores the Transaction Id returns from the Payment Gateway when this contarct is charging any payment method.</inlineHelpText>
        <label>Payment Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Response_Code__c</fullName>
        <description>Stores the response code received from payment processor</description>
        <inlineHelpText>Stores the response code received from payment processor</inlineHelpText>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Response_Date_Time__c</fullName>
        <description>Stores the Date/Time of response received from payment processor.</description>
        <inlineHelpText>Stores the Date/Time of response received from payment processor.</inlineHelpText>
        <label>Response Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Response_Message__c</fullName>
        <description>Automatically populated, authorization approval or error message.</description>
        <inlineHelpText>Automatically populated, authorization approval or error message.</inlineHelpText>
        <label>Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Amount__c</fullName>
        <description>This will display Grouped Transactions Total Amount</description>
        <inlineHelpText>Grouped Transactions Total Amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Batch_Run_ID__c</fullName>
        <description>Internal field used to track batch processing runs from batch group to batch group.</description>
        <inlineHelpText>Internal field used to track batch processing runs from batch group to batch group.</inlineHelpText>
        <label>Batch Run ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Grouping_Type__c</fullName>
        <description>Time period measure used when grouping transactions</description>
        <inlineHelpText>Time period measure used when grouping transactions</inlineHelpText>
        <label>Grouping Type</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payment_Method__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Payment Method by which this contract will be completed</description>
        <inlineHelpText>Payment Method by which this contract will be completed</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>rC_Giving__Payment_Method__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>